@@ -2690,7 +2690,7 @@ config_file_parse (const char *filename,
       },
       {
         "ipmi-pet-event-state-config-file",
-        CONFFILE_OPTION_BOOL,
+        CONFFILE_OPTION_STRING,
         -1,
         _config_file_string,
         1,
@@ -2928,7 +2928,7 @@ config_file_parse (const char *filename,
       },
       {
         "ipmi-sel-event-state-config-file",
-        CONFFILE_OPTION_BOOL,
+        CONFFILE_OPTION_STRING,
         -1,
         _config_file_string,
         1,
@@ -3290,7 +3290,7 @@ config_file_parse (const char *filename,
       },
       {
         "ipmi-sensors-sensor-state-config-file",
-        CONFFILE_OPTION_BOOL,
+        CONFFILE_OPTION_STRING,
         -1,
         _config_file_string,
         1,
